--- a/src/App.css
+++ b/src/App.css
@@ -5,20 +5,13 @@
 }
 .image-form
 {
-  width: 450px;
+  width: 350px;
   margin: auto;
 }
-.image-list {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
-  grid-row-end: span 2;
+.image-list{
+  text-align: center;
+  grid-row-end: 10px
 }
 .image-list img {
   width: 500px;
-}
-
-.col img {
-  margin-top: 10px;
-  vertical-align: middle;
- 
 }
